Po wykonaniu ćwiczenia nr 1 Po dodaniu klasy ConsoleWriter.